exports[`Watch mode flows Pressing "T" enters pattern mode 1`] = `
"


 pattern › t
[MOCK - cursorSavePosition]


 Pattern matches 10 tests.

path/to/file1-test.js › test 1

path/to/file2-test.js › test 2

path/to/file3-test.js › test 3

path/to/file4-test.js › test 4

path/to/file5-test.js › test 5

path/to/file6-test.js › test 6

path/to/file7-test.js › test 7

path/to/file8-test.js › test 8

path/to/file9-test.js › test 9

path/too/file9-test.js › test 9
[MOCK - cursorTo(12, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "T" enters pattern mode 2`] = `
"


 pattern › te
[MOCK - cursorSavePosition]


 Pattern matches 10 tests.

path/to/file1-test.js › test 1

path/to/file2-test.js › test 2

path/to/file3-test.js › test 3

path/to/file4-test.js › test 4

path/to/file5-test.js › test 5

path/to/file6-test.js › test 6

path/to/file7-test.js › test 7

path/to/file8-test.js › test 8

path/to/file9-test.js › test 9

path/too/file9-test.js › test 9
[MOCK - cursorTo(13, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "T" enters pattern mode 3`] = `
"


 pattern › tes
[MOCK - cursorSavePosition]


 Pattern matches 10 tests.

path/to/file1-test.js › test 1

path/to/file2-test.js › test 2

path/to/file3-test.js › test 3

path/to/file4-test.js › test 4

path/to/file5-test.js › test 5

path/to/file6-test.js › test 6

path/to/file7-test.js › test 7

path/to/file8-test.js › test 8

path/to/file9-test.js › test 9

path/too/file9-test.js › test 9
[MOCK - cursorTo(14, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "T" enters pattern mode 4`] = `
"


 pattern › test
[MOCK - cursorSavePosition]


 Pattern matches 10 tests.

path/to/file1-test.js › test 1

path/to/file2-test.js › test 2

path/to/file3-test.js › test 3

path/to/file4-test.js › test 4

path/to/file5-test.js › test 5

path/to/file6-test.js › test 6

path/to/file7-test.js › test 7

path/to/file8-test.js › test 8

path/to/file9-test.js › test 9

path/too/file9-test.js › test 9
[MOCK - cursorTo(15, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "T" enters pattern mode 5`] = `
"


 pattern › test 
[MOCK - cursorSavePosition]


 Pattern matches 10 tests.

path/to/file1-test.js › test 1

path/to/file2-test.js › test 2

path/to/file3-test.js › test 3

path/to/file4-test.js › test 4

path/to/file5-test.js › test 5

path/to/file6-test.js › test 6

path/to/file7-test.js › test 7

path/to/file8-test.js › test 8

path/to/file9-test.js › test 9

path/too/file9-test.js › test 9
[MOCK - cursorTo(16, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "T" enters pattern mode 6`] = `
"


 pattern › test 1
[MOCK - cursorSavePosition]


 Pattern matches 1 test.

path/to/file1-test.js › test 1
[MOCK - cursorTo(17, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "T" enters pattern mode 7`] = `
"


 pattern › test 12
[MOCK - cursorSavePosition]


 Pattern matches no tests.
[MOCK - cursorTo(18, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "T" enters pattern mode 8`] = `
"


 pattern › test 1
[MOCK - cursorSavePosition]


 Pattern matches 1 test.

path/to/file1-test.js › test 1
[MOCK - cursorTo(17, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "T" enters pattern mode 9`] = `
"


 pattern › test 
[MOCK - cursorSavePosition]


 Pattern matches 10 tests.

path/to/file1-test.js › test 1

path/to/file2-test.js › test 2

path/to/file3-test.js › test 3

path/to/file4-test.js › test 4

path/to/file5-test.js › test 5

path/to/file6-test.js › test 6

path/to/file7-test.js › test 7

path/to/file8-test.js › test 8

path/to/file9-test.js › test 9

path/too/file9-test.js › test 9
[MOCK - cursorTo(16, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "T" enters pattern mode 10`] = `
"


 pattern › test *
[MOCK - cursorSavePosition]


 Pattern matches 10 tests.

path/to/file1-test.js › test 1

path/to/file2-test.js › test 2

path/to/file3-test.js › test 3

path/to/file4-test.js › test 4

path/to/file5-test.js › test 5

path/to/file6-test.js › test 6

path/to/file7-test.js › test 7

path/to/file8-test.js › test 8

path/to/file9-test.js › test 9

path/too/file9-test.js › test 9
[MOCK - cursorTo(17, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Results in pattern mode get truncated appropriately 1`] = `
"


 pattern › t
[MOCK - cursorSavePosition]


 Pattern matches 10 tests.

path/to/file1-test.js › test 1

path/to/file2-test.js › test 2

path/to/file3-test.js › test 3

path/to/file4-test.js › test 4

path/to/file5-test.js › test 5

path/to/file6-test.js › test 6

path/to/file7-test.js › test 7

path/to/file8-test.js › test 8

path/to/file9-test.js › test 9

path/too/file9-test.js › test 9
[MOCK - cursorTo(12, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Results in pattern mode get truncated appropriately 2`] = `
"


 pattern › t
[MOCK - cursorSavePosition]


 Pattern matches 10 tests.

path/to/file1-test.js › test 1

path/to/file2-test.js › test 2

path/to/file3-test.js › test 3

path/to/file4-test.js › test 4

path/to/file5-test.js › test 5

path/to/file6-test.js › test 6

path/to/file7-test.js › test 7

path/to/file8-test.js › test 8

path/to/file9-test.js › test 9

.../too/file9-test.js › test 9
[MOCK - cursorTo(12, 4)]
[MOCK - cursorRestorePosition]"
`;
